Fixed wordwrapping and excerpt length

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -3,10 +3,6 @@ body,
 .post-full-content {
 	font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
-.post-card-excerpt {
-	text-align: justify;
-	word-break: break-all;
-}
 img {
 	image-rendering: -webkit-optimize-contrast;
 }
